--- a/index.html
+++ b/index.html
@@ -6,6 +6,58 @@
     <title>Tea Cozy</title>
 </head>
 <body>
+    <nav class="navigation">
+        <div class="logo"></div>
+        <div class="links"></div>
+    </nav>
+
+    <section class="himage">
+        <div class="htext">
+            <h2>Our mission</h2>
+            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Btch, Fair Trade, Organic Tea</h4>
+        </div>  
+    </section>
+
+    <section class="teas">
+        <img src="medias/images/berryblitz.jpg" alt="berry blitz tea">
+        <img src="medias/images/spiced-rum.jpg" alt="spiced rum tea">
+        <img src="medias/images/donut.jpg" alt="donuts">
+        <img src="medias/images/myrtle-ave.jpg" alt="myrtle-ave tea">
+        <img src="medias/images/bedford-bizarre.jpg" alt="bedford bizarre tea">
+    </section>
+
+    <section class="locations">
+        <div>
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+        </div>
+
+        <div>
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
+        </div>
+
+        <div>
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
+        </div>
+    </section>
+
+    <section class="contacts">
+        <p>The Tea Cozy</p>
+        <h5>contact@theteacozy.com</h5>
+        <p>917-555-8904</p>
+    </section>
+
+    <footer>
+        <p>copyright The Tea Cozy 2017</p>
+    </footer>
     
 </body>
 </html>
