add navbar content

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
     <nav class="navigation">
-        <div class="logo"></div>
-        <div class="links"></div>
+        <div class="logo">
+            <img src="medias/images/logo.png" alt="tea cozy logo">
+        </div>
+        <div class="links">
+            <a href="#">Mission</a>
+            <a href="#teas">Featured Tea</a>
+            <a href="#locations">Locations</a>
+        </div>
     </nav>
 
     <section class="himage">
@@ -58,6 +64,6 @@
     <footer>
         <p>copyright The Tea Cozy 2017</p>
     </footer>
-    
+
 </body>
 </html>
