--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
             <img src="medias/images/logo.png" alt="tea cozy logo">
         </div>
         <div class="links">
-            <a href="#">Mission</a>
+            <a href="#mission">Mission</a>
             <a href="#teas">Featured Tea</a>
             <a href="#locations">Locations</a>
         </div>
     </nav>
 
-    <section class="himage">
-        <div class="htext">
-            <h2>Our mission</h2>
-            <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Btch, Fair Trade, Organic Tea</h4>
-        </div>  
+    <section class="headerimage">
+        <div class="himage" id="mission">
+            <div class="htext">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </div> 
+        </div>
+         
     </section>
 
-    <section class="teas">
+    <section class="teas" id="teas">
         <img src="medias/images/berryblitz.jpg" alt="berry blitz tea">
         <img src="medias/images/spiced-rum.jpg" alt="spiced rum tea">
         <img src="medias/images/donut.jpg" alt="donuts">
@@ -33,7 +36,7 @@
         <img src="medias/images/bedford-bizarre.jpg" alt="bedford bizarre tea">
     </section>
 
-    <section class="locations">
+    <section class="locations" id="locations">
         <div>
             <h3>Downtown</h3>
             <p>384 West 4th St</p>
